# windows_link_error

./: README.md  Small.cabal  cabal.project  foreign_fun.c
.github/workflows/: windows.yaml
Small/: Dep.hs  Foo.hs  Foreign.hs
cppdep/: CPPDep.cabal  foo.c  foreign_fun.c
cppdep/CPPDep/: Foreign.hs
include/: foreign_fun.h
small/: Small.cabal
small/Small/: Dep.hs
