cabal-version: 2.2

name:           Small
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      Small.Foo
  other-modules:
      Small.Dep
  build-depends:
      base
    , template-haskell
  default-language: GHC2021
  cxx-sources:
    foreign_fun.cpp
  include-dirs:
    include
