cabal-version: 3.0
name:           Small
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      Small.Foo
  other-modules:
      Small.Dep
  build-depends:
      base
    , template-haskell
  default-language: GHC2021
  c-sources:
    foreign_fun.c
  include-dirs:
    include
