cabal-version: 2.2

name:           CPPDep
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      CPPDep.Foreign
  build-depends:
      base
    , template-haskell
    , inline-c-cpp
    , system-cxx-std-lib
  default-language: GHC2021
  cxx-sources:
    foo.cpp
  include-dirs:
    include
