cabal-version: 2.2

name:           CPPDep
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      CPPDep.Foreign
  build-depends:
      base
    , template-haskell
    , inline-c
    , system-cxx-std-lib
  default-language: GHC2021
  cxx-sources:
    foreign_fun.cpp
  include-dirs:
    include
